Fix code warnings.